adiconando endpoint de lote e consulta